# shieldpay

./: .gitignore  Dockerfile  README.md  SETUP.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  Procfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8318fdae5e0f_add_webhook_events_table.py  cfbcaf59b2b2_initial_schema.py
backend/app/: config.py  database.py  main.py  middleware.py
backend/app/api/: auth.py  deps.py  disputes.py  health.py  milestones.py  payments.py  projects.py  ratings.py  users.py  webhooks.py
backend/app/models/: __init__.py  dispute.py  milestone.py  payment.py  project.py  rating.py  user.py  webhook_event.py
backend/app/schemas/: dispute.py  milestone.py  payment.py  project.py  rating.py  user.py
backend/app/services/: escrow_service.py  notification_service.py  reputation_service.py  stripe_service.py
backend/app/utils/: exceptions.py  rate_limit.py  security.py
backend/tests/: conftest.py  test_auth.py  test_disputes.py  test_escrow_flow.py  test_health.py  test_milestones.py  test_payments.py  test_projects.py  test_ratings.py  test_webhooks.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  PITCH_DECK.md
frontend/: .env.example  next.config.mjs  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/hooks/: useAnimatedCounter.ts  useAuth.ts  useProjects.ts
frontend/src/lib/: api.ts  stripe.ts  utils.ts
frontend/src/types/: index.ts
(+29 files in other folders)
