[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shieldpay-backend"
version = "0.1.0"
description = "ShieldPay — Freelancer Payment Protection Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.34,<0.35",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<1.15",
    "pydantic[email]>=2.10,<2.11",
    "pydantic-settings>=2.7,<2.8",
    "python-jose[cryptography]>=3.3,<3.4",
    "passlib[bcrypt]>=1.7,<1.8",
    "bcrypt>=4.0,<5",
    "stripe>=12,<13",
    "python-dotenv>=1.0,<1.1",
    "slowapi>=0.1,<0.2",
    "httpx>=0.28,<0.29",
    "python-multipart>=0.0.9",
    "sendgrid>=6,<7",
    "sentry-sdk[fastapi]>=2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=6,<7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
